---
source: figue/src/schema/tests.rs
expression: stripped
---
Error: config field must be a struct
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct BadConfigField {
   │        ───────┬──────  
   │               ╰──────── defined at figue/src/schema/tests.rs:191
   │ 
 4 │     config: String,
   │     ───────┬──────  
   │            ╰──────── config field must be a struct
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
